He agregado el link al footer

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         </section>
     </main>  
     <footer>
-        <h4>Visita https://www.anipedia.net/iguanas/iguana-verde/ para conocer más.</h4>
+        <h4>Visita <a href="https://www.anipedia.net/iguanas/iguana-verde/" target="_blank">https://www.anipedia.net/iguanas/iguana-verde/</a>  para conocer más.</h4>
     </footer>  
 </body>
 </html>
